// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JoinForm render disables form when loading 1`] = `
<form>
  <Grid
    className="spacer"
  >
    <Grid.Column
      lg={6}
      md={6}
      xs={12}
    >
      <Field
        autoComplete="given-name"
        component={[Function]}
        disabled={true}
        label="First Name"
        name="first_name"
        placeholder="Leslie"
        validate={[Function]}
      />
    </Grid.Column>
    <Grid.Column
      lg={6}
      md={6}
      xs={12}
    >
      <Field
        autoComplete="family-name"
        component={[Function]}
        disabled={true}
        label="Last Name"
        name="last_name"
        placeholder="Knope"
        validate={[Function]}
      />
    </Grid.Column>
  </Grid>
  <Field
    autoComplete="organization"
    component={[Function]}
    disabled={true}
    label="Company"
    name="company_name"
    placeholder="Knope Industries LLC"
  />
  <Field
    autoComplete="username email"
    component={[Function]}
    disabled={true}
    label="Email"
    name="email"
    placeholder="leslie.knope@pawnee.indiana.state.us.gov"
    validate={
      Array [
        [Function],
        [Function],
      ]
    }
  />
  <Field
    autoComplete="new-password"
    component={[Function]}
    connectRight={
      <ShowPasswordButton
        onClick={[Function]}
      >
        Show
      </ShowPasswordButton>
    }
    disabled={true}
    label="Password"
    name="password"
    placeholder="••••••••••••"
    type="password"
    validate={
      Array [
        [Function],
        [Function],
        [Function],
      ]
    }
  />
  <Checkbox.Group>
    <Field
      component={[Function]}
      disabled={true}
      id="email_opt_in"
      label={
        <span>
          I'm happy to receive marketing email from SparkPost
        </span>
      }
      name="email_opt_in"
      type="checkbox"
    />
    <Field
      component={[Function]}
      disabled={true}
      id="tou_accepted"
      label={
        <span>
          I agree to SparkPost's 
          <ExternalLink
            to="https://www.sparkpost.com/policies/tou"
          >
            Terms of Use
          </ExternalLink>
        </span>
      }
      name="tou_accepted"
      type="checkbox"
      validate={[Function]}
    />
  </Checkbox.Group>
  <Button
    disabled={true}
    id="submit"
    onClick={[Function]}
    primary={true}
  >
    Loading
  </Button>
  <t
    badge="bottomright"
    elementID="g-recaptcha"
    expiredCallbackName="expiredCallback"
    hl="en"
    onloadCallback={[Function]}
    onloadCallbackName="onloadCallback"
    render="explicit"
    sitekey="6LekChoUAAAAAJZouMPHnhRss2t7-ZetbAABfsOZ"
    size="invisible"
    tabindex="0"
    theme="light"
    type="image"
    verifyCallback={[Function]}
    verifyCallbackName="verifyCallback"
  />
</form>
`;

exports[`JoinForm render disables form when recaptcha is not loaded 1`] = `
<form>
  <Grid
    className="spacer"
  >
    <Grid.Column
      lg={6}
      md={6}
      xs={12}
    >
      <Field
        autoComplete="given-name"
        component={[Function]}
        disabled={true}
        label="First Name"
        name="first_name"
        placeholder="Leslie"
        validate={[Function]}
      />
    </Grid.Column>
    <Grid.Column
      lg={6}
      md={6}
      xs={12}
    >
      <Field
        autoComplete="family-name"
        component={[Function]}
        disabled={true}
        label="Last Name"
        name="last_name"
        placeholder="Knope"
        validate={[Function]}
      />
    </Grid.Column>
  </Grid>
  <Field
    autoComplete="organization"
    component={[Function]}
    disabled={true}
    label="Company"
    name="company_name"
    placeholder="Knope Industries LLC"
  />
  <Field
    autoComplete="username email"
    component={[Function]}
    disabled={true}
    label="Email"
    name="email"
    placeholder="leslie.knope@pawnee.indiana.state.us.gov"
    validate={
      Array [
        [Function],
        [Function],
      ]
    }
  />
  <Field
    autoComplete="new-password"
    component={[Function]}
    connectRight={
      <ShowPasswordButton
        onClick={[Function]}
      >
        Show
      </ShowPasswordButton>
    }
    disabled={true}
    label="Password"
    name="password"
    placeholder="••••••••••••"
    type="password"
    validate={
      Array [
        [Function],
        [Function],
        [Function],
      ]
    }
  />
  <Checkbox.Group>
    <Field
      component={[Function]}
      disabled={true}
      id="email_opt_in"
      label={
        <span>
          I'm happy to receive marketing email from SparkPost
        </span>
      }
      name="email_opt_in"
      type="checkbox"
    />
    <Field
      component={[Function]}
      disabled={true}
      id="tou_accepted"
      label={
        <span>
          I agree to SparkPost's 
          <ExternalLink
            to="https://www.sparkpost.com/policies/tou"
          >
            Terms of Use
          </ExternalLink>
        </span>
      }
      name="tou_accepted"
      type="checkbox"
      validate={[Function]}
    />
  </Checkbox.Group>
  <Button
    disabled={true}
    id="submit"
    onClick={[Function]}
    primary={true}
  >
    Create Account
  </Button>
  <t
    badge="bottomright"
    elementID="g-recaptcha"
    expiredCallbackName="expiredCallback"
    hl="en"
    onloadCallback={[Function]}
    onloadCallbackName="onloadCallback"
    render="explicit"
    sitekey="6LekChoUAAAAAJZouMPHnhRss2t7-ZetbAABfsOZ"
    size="invisible"
    tabindex="0"
    theme="light"
    type="image"
    verifyCallback={[Function]}
    verifyCallbackName="verifyCallback"
  />
</form>
`;

exports[`JoinForm render enables form correctly 1`] = `
<form>
  <Grid
    className="spacer"
  >
    <Grid.Column
      lg={6}
      md={6}
      xs={12}
    >
      <Field
        autoComplete="given-name"
        component={[Function]}
        disabled={false}
        label="First Name"
        name="first_name"
        placeholder="Leslie"
        validate={[Function]}
      />
    </Grid.Column>
    <Grid.Column
      lg={6}
      md={6}
      xs={12}
    >
      <Field
        autoComplete="family-name"
        component={[Function]}
        disabled={false}
        label="Last Name"
        name="last_name"
        placeholder="Knope"
        validate={[Function]}
      />
    </Grid.Column>
  </Grid>
  <Field
    autoComplete="organization"
    component={[Function]}
    disabled={false}
    label="Company"
    name="company_name"
    placeholder="Knope Industries LLC"
  />
  <Field
    autoComplete="username email"
    component={[Function]}
    disabled={false}
    label="Email"
    name="email"
    placeholder="leslie.knope@pawnee.indiana.state.us.gov"
    validate={
      Array [
        [Function],
        [Function],
      ]
    }
  />
  <Field
    autoComplete="new-password"
    component={[Function]}
    connectRight={
      <ShowPasswordButton
        onClick={[Function]}
      >
        Show
      </ShowPasswordButton>
    }
    disabled={false}
    label="Password"
    name="password"
    placeholder="••••••••••••"
    type="password"
    validate={
      Array [
        [Function],
        [Function],
        [Function],
      ]
    }
  />
  <Checkbox.Group>
    <Field
      component={[Function]}
      disabled={false}
      id="email_opt_in"
      label={
        <span>
          I'm happy to receive marketing email from SparkPost
        </span>
      }
      name="email_opt_in"
      type="checkbox"
    />
    <Field
      component={[Function]}
      disabled={false}
      id="tou_accepted"
      label={
        <span>
          I agree to SparkPost's 
          <ExternalLink
            to="https://www.sparkpost.com/policies/tou"
          >
            Terms of Use
          </ExternalLink>
        </span>
      }
      name="tou_accepted"
      type="checkbox"
      validate={[Function]}
    />
  </Checkbox.Group>
  <Button
    disabled={false}
    id="submit"
    onClick={[Function]}
    primary={true}
  >
    Create Account
  </Button>
  <t
    badge="bottomright"
    elementID="g-recaptcha"
    expiredCallbackName="expiredCallback"
    hl="en"
    onloadCallback={[Function]}
    onloadCallbackName="onloadCallback"
    render="explicit"
    sitekey="6LekChoUAAAAAJZouMPHnhRss2t7-ZetbAABfsOZ"
    size="invisible"
    tabindex="0"
    theme="light"
    type="image"
    verifyCallback={[Function]}
    verifyCallbackName="verifyCallback"
  />
</form>
`;
